<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>emapp</groupId>
  <artifactId>api</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <sparkjava.version>2.9.4</sparkjava.version>
    <minimal-json.version>0.9.5</minimal-json.version>
    <slf4j-simple.version>2.0.6</slf4j-simple.version>
    <slf4j.version>${slf4j-simple.version}</slf4j.version>
    <junit.version>5.9.2</junit.version>
    <assertj.version>3.24.2</assertj.version>
    <mockito.version>1.10.19</mockito.version>
    <restassured.version>5.3.0</restassured.version>
    <gson.version>2.10.1</gson.version>
    <mockito-junit-jupiter.version>5.1.1</mockito-junit-jupiter.version>
    <encoding>UTF-8</encoding>
    <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.sparkjava</groupId>
      <artifactId>spark-core</artifactId>
      <version>${sparkjava.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.angus</groupId>
      <artifactId>angus-mail</artifactId>
      <version>2.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>${mockito-junit-jupiter.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <release>19</release>
          <compilerArgs>
            <arg>--enable-preview</arg>
            <arg>--add-modules=jdk.incubator.concurrent</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.1</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
            <include>**/*Should.java</include>
          </includes>
          <excludes>
            <exclude>**/IT*.java</exclude>
          </excludes>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-surefire-provider</artifactId>
            <version>1.3.2</version>
          </dependency>
        </dependencies>
      </plugin>
<!--
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.19.1</version>
        <executions>
          <execution>
            <id>integration-tests</id>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
            <configuration>
              <skipTests>false</skipTests>
              <includes>
                <include>**/IT*.java</include>
              </includes>
              <excludes>
                <exclude>**/APITestSuit*.java</exclude>
              </excludes>
            </configuration>

          </execution>
        </executions>
      </plugin>
-->

<!--      <plugin>-->
<!--        <groupId>org.apache.maven.plugins</groupId>-->
<!--        <artifactId>maven-shade-plugin</artifactId>-->
<!--        <version>2.3</version>-->
<!--        <executions>-->
<!--          <execution>-->
<!--            <phase>package</phase>-->
<!--            <goals>-->
<!--              <goal>shade</goal>-->
<!--            </goals>-->
<!--            <configuration>-->
<!--              <finalName>openchat</finalName>-->
<!--              <transformers>-->
<!--                &lt;!&ndash; add Main-Class to manifest file &ndash;&gt;-->
<!--                <transformer-->
<!--                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
<!--                  <mainClass>org.openchat.OpenChatLauncher</mainClass>-->
<!--                </transformer>-->
<!--              </transformers>-->
<!--            </configuration>-->
<!--          </execution>-->
<!--        </executions>-->
<!--      </plugin>-->
    </plugins>
  </build>

<!--  <profiles>-->
<!--    <profile>-->
<!--      <id>dev</id>-->
<!--      <activation>-->
<!--        <activeByDefault>true</activeByDefault>-->
<!--      </activation>-->
<!--      <properties>-->
<!--        <build.profile.id>dev</build.profile.id>-->
<!--        <skip.integration.tests>true</skip.integration.tests>-->
<!--        <skip.unit.tests>false</skip.unit.tests>-->
<!--      </properties>-->
<!--    </profile>-->
<!--    <profile>-->
<!--      <id>integration-test</id>-->
<!--      <properties>-->
<!--        <build.profile.id>integration-test</build.profile.id>-->
<!--        <skip.integration.tests>false</skip.integration.tests>-->
<!--        <skip.unit.tests>true</skip.unit.tests>-->
<!--      </properties>-->
<!--    </profile>-->
<!--  </profiles>-->

</project>
